Support offset for queries
